--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -6,27 +6,76 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}<br>
 
 {% block content %}
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home_flight.jpg)">
+		<div class="overlay"></div>
+		<div class="gtco-container">
+			<div class="row">
+				<div class="col-md-12 col-md-offset-0 text-center">
+					<div class="row row-mt-15em">
 
-<header class="header">
-  <div class="container sign-in">
-    <center>
-      <br>
-      <h1>{% trans "Sign Out" %}</h1><br>
-    </center>
+						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
+							<h1 class="sign-in">{% trans "Sign Out" %}</h1>
+						</div>
 
-    <center>
-      <h6>{% trans 'Are you sure you want to sign out?' %}</h6><br>
-    </center>
+					</div>
 
-    <center>
-      <form method="post" action="{% url 'account_logout' %}">
-        {% csrf_token %}
+				</div>
+			</div>
+		</div>
+	</header>
+
+
+  <div class="container gtco-section" style="
+    padding-top: 10px;
+">
+    <div class="row">
+      <div class="col-12">
+        <br>
+        <br>
+        <center>
+        <h3>Are you sure you want to sign out?</h3>
+
+        <form class="login" method="POST" action="{% url 'account_logout' %}">
+          {% csrf_token %}
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button type="submit" class="btn cart-btn">{% trans 'Sign Out' %}</button><br>
-      </form><br><br><br>
-    </center>
+        <button type="submit" class="btn btn-primary">{% trans 'Sign Out' %}</button><br>
+        </form>
+        </center>
+
+      </div>
+      <div class="canvas__open">
+        <i class="fa fa-bars"></i>
+      </div>
+    </div>
   </div>
-</header>
+
+
+
+
+
+
+<!--<header class="header">-->
+<!--  <div class="container sign-in">-->
+<!--    <center>-->
+<!--      <br>-->
+<!--      <h1>{% trans "Sign Out" %}</h1><br>-->
+<!--    </center>-->
+
+<!--    <center>-->
+<!--      <h6>{% trans 'Are you sure you want to sign out?' %}</h6><br>-->
+<!--    </center>-->
+
+<!--    <center>-->
+<!--      <form method="post" action="{% url 'account_logout' %}">-->
+<!--        {% csrf_token %}-->
+<!--        {% if redirect_field_value %}-->
+<!--        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />-->
+<!--        {% endif %}-->
+<!--        <button type="submit" class="btn cart-btn">{% trans 'Sign Out' %}</button><br>-->
+<!--      </form><br><br><br>-->
+<!--    </center>-->
+<!--  </div>-->
+<!--</header>-->
 {% endblock %}
