--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,17 +6,33 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home_flight.jpg)">
+		<div class="overlay"></div>
+		<div class="gtco-container">
+			<div class="row">
+				<div class="col-md-12 col-md-offset-0 text-center">
+					<div class="row row-mt-15em">
 
-<header class="header">
-  <div class="container">
+						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
+							<h1 class="sign-in">{% trans "Sign Up" %}</h1>
+						</div>
+
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</header>
+
+
+ <div class="container gtco-section" style="padding-top: 10px;">
     <div class="row">
       <div class="col-12">
         <br>
         <br>
 
-        <h1 class="sign-in">{% trans "Sign Up" %}</h1>
 
-        <p>{% blocktrans %}Already have an account or want to login through your Ashoka Google Account? Then
+        <p>{% blocktrans %}Already have an account or want to login through your Google Account? Then
           please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
         <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
@@ -29,8 +45,6 @@
         </form><br><br>
 
       </div>
-    </div>
-</header>
-
+    </div>\
 
 {% endblock %}
