Airline logos added

--- a/templates/flight_details.html
+++ b/templates/flight_details.html
@@ -26,7 +26,8 @@
 	<div class="gtco-section">
 		<div class="gtco-container">
 			<div class="col-lg-7">
-			<h2>{{object.airline}}</h2>
+                <img class="col-md-2" src="/media/{{ object.image }}">
+				<h2>{{object.airline}}</h2><h5> {{object.flight_no}}</h5>
             <br>
             <h4>{{object.start}}</h4>
                 <br><h5>TO</h5><br>
