--- a/templates/flight_details.html
+++ b/templates/flight_details.html
@@ -5,7 +5,7 @@
 <div id="page">
 
 
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(images/img_6.jpg)">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home-2.jpg)">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
