--- a/templates/index.html
+++ b/templates/index.html
@@ -246,7 +246,7 @@
 						</figure>
 						<div class="fh5co-text">
 							<h2>The United States</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
+							
 						</div>
 					</a>
 				</div>
@@ -258,7 +258,7 @@
 						</figure>
 						<div class="fh5co-text">
 							<h2>France</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
+
 						</div>
 					</a>
 				</div>
@@ -271,7 +271,7 @@
 						</figure>
 						<div class="fh5co-text">
 							<h2>Greece</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
+
 						</div>
 					</a>
 				</div>
@@ -322,7 +322,7 @@
 	</div>
 
 
-	<div class="gtco-cover gtco-cover-sm" style="background-image: url(/static/images/home-2.jpg)">
+	<div class="gtco-cover gtco-cover-sm" style="background-image: url(/static/images/inside_flight.jpg)">
 		<div class="overlay"></div>
 		<div class="gtco-container text-center">
 			<div class="display-t">
