--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
 	<title>Travoyage</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
@@ -246,7 +247,7 @@
 						</figure>
 						<div class="fh5co-text">
 							<h2>The United States</h2>
-							
+
 						</div>
 					</a>
 				</div>
