--- a/templates/base.html
+++ b/templates/base.html
@@ -79,8 +79,7 @@
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
 						<li><a href="/destination.html">Destination</a></li>
-						<li><a href="/pricing.html">Pricing</a></li>
-						<li><a href="/contact.html">Contact</a></li>
+						<li><a href="/contact.html">Contact Us</a></li>
 						{% if request.user.is_authenticated %}
 						<li><a href="/my_account">My Account</a></li>
 						<li><a href="{%url 'account_logout'%}">Logout</a></li>
