My flights page UI modified

--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -16,7 +16,7 @@
 
 						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp" style="
     margin-top: 80px;>
-							<span class="intro-text-small">Travoyage</span>
+							<p class="intro-text-small"></span>
 							<h1>My Account</h1>
 						</div>
 
