--- a/templates/my_flights.html
+++ b/templates/my_flights.html
@@ -55,6 +55,9 @@
 
 					<div class="gtco-contact-info">
 						<h3>Happy Travelling!!</h3>
+						<h3>Quench the wanderlust in you!</h3>
+						<a href="/destination.html" class="btn btn-primary btn-sm">Explore Destinations</a>
+						<a href="/index.html" class="btn btn-primary btn-sm">Book a Flight</a>
 					</div>
 
 
