booking_confirmed UI modified

--- a/templates/booking_confirmed.html
+++ b/templates/booking_confirmed.html
@@ -110,17 +110,16 @@
 							<div class=" col-md-12 animate-box" data-animate-effect="fadeInRight">
 								<div class="form-wrap">
 
-									<div class="tab">
+
 
 										<div class="tab-content">
-											<div role="tabpanel" class="tab-content-inner active" id="flights">
-												<center><h3>Congratulations! Your flight has been booked!</h3></center>
-
+											<div>
+												<center><h3>Congratulations! Your flight has been booked!</h3>
+                                                        <p>We hope you have an amazing trip!</p></center>
 											</div>
 										</div>
 
 
-									</div>
 								</div>
 							</div>
 						</div>
