Interactive Maps - All dest

--- a/templates/destination_details.html
+++ b/templates/destination_details.html
@@ -61,6 +61,15 @@
 						{% elif object.name == 'Seoul, South Korea' %}
 						<iframe width="600" height="500" src="https://maps.google.com/maps?q=Seoul%2C%20South%20Korea&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 
+						{% elif object.name == 'Sydney, Australia' %}
+						<iframe width="600" height="500" src="https://maps.google.com/maps?q=Sydney%2C%20Australia&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+
+						{% elif object.name == 'Athens, Greece' %}
+						<iframe width="600" height="500" src="https://maps.google.com/maps?q=Athens%2C%20Greece&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+
+						{% elif object.name == 'Madrid, Spain' %}
+						<iframe width="600" height="500" src="https://maps.google.com/maps?q=Madrid%2C%20Spain&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+
 						{% endif %}
 
 					</div>
