Satellite Maps feature + UI improved

--- a/templates/destination_details.html
+++ b/templates/destination_details.html
@@ -33,8 +33,6 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-<!--					<h2>Information</h2>-->
-<!--					<h4>Quote on the City</h4>&ndash;&gt;-->
 					<h3 style="color: #09C6AB">{{object.quote}}</h3>
 				</div>
 			</div>
@@ -46,6 +44,8 @@
 					<br>
 					<h4>Places to Visit</h4>
 					<p>{{object.things_to_do}}</p>
+					<br>
+					<a href="#"><button class="btn btn-primary" type="submit">View Flights</button></a>
 				</div>
 
 
