--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
 					</div>
 					<div class="col-xs-8 text-right menu-1">
 						<ul>
-							<li><a href="destination.html">Destination</a></li>
+							<li><a href="destination.html">Destinations</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
 							{% if request.user.is_authenticated %}
 							<li><a href="/my_account">My Account</a></li>
@@ -233,7 +233,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 					<h2>Most Popular Destinations</h2>
-					<p>Check out our TOP 3 Destinations. Want to see more? Head over to <a href="/destination.html">Destinations</a>!</p>
+					<p>Check out our TOP 3 Destinations! Want to explore <a href="/destination.html">more</a>?</p>
 				</div>
 			</div>
 			<div class="row">
