2 new flights added, UI changes

--- a/templates/booking_confirmed.html
+++ b/templates/booking_confirmed.html
@@ -115,7 +115,9 @@
 										<div class="tab-content">
 											<div>
 												<center><h3>Congratulations! Your flight has been booked!</h3>
-                                                        <p>We hope you have an amazing trip!</p></center>
+                                                        <p>We hope you have an amazing trip!</p>
+													<hr>
+												<a href="/"><span class="btn btn-primary">Done!</span></a></center>
 											</div>
 										</div>
 
