--- a/templates/destination_details.html
+++ b/templates/destination_details.html
@@ -45,7 +45,7 @@
 					<h4>Places to Visit</h4>
 					<p>{{object.things_to_do}}</p>
 					<br>
-					<a href="#"><button class="btn btn-primary" type="submit">View Flights</button></a>
+					<a href="/"><button class="btn btn-primary" type="submit">Search for Flights Now!</button></a>
 				</div>
 
 
