Home Search placeholders changed, other minor UI stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -122,14 +122,14 @@
 															<div class=" input-field">
 																<label for="from-place">From:</label>
 																<input type="text" class="form-control" id="from-place" name="from-place"
-																	placeholder="Los Angeles, USA" />
+																	placeholder="Delhi, India" />
 															</div>
 														</div>
 														<div class="col-xxs-12 col-xs-12 mt">
 															<div class="input-field">
 																<label for="to-place">To:</label>
 																<input type="text" class="form-control" id="to-place" name="to-place"
-																	placeholder="Tokyo, Japan" />
+																	placeholder="London, United Kingdom" />
 															</div>
 														</div>
 
