--- a/templates/details_confirmation.html
+++ b/templates/details_confirmation.html
@@ -27,7 +27,7 @@
 		<div class="gtco-container">
 			<div class="col-lg-8">
 			<div class="row">
-				<p> Please confirm your details below before your booking is confirmed:</p>
+				<p> Please confirm your details below in order to finalize your flight:</p>
                             <div class="col-lg-12">
                              <form method="POST">
                                  {% csrf_token %}
