--- a/templates/flights_results.html
+++ b/templates/flights_results.html
@@ -36,17 +36,17 @@
 				{% if object_list %}
 				{% for flight in object_list %}
 					<div class="col-lg-12 col-md-4 col-sm-6">
-					<a class="fh5co-card-item ">
+					<a class="fh5co-card-item " href="{{flight.get_abs_url}}">
 
 						<div class="fh5co-text">
 
-							<h2 align="left">{{flight.flight_no}}, {{flight.airline}}</h2>
+							<h1 align="left">{{flight.flight_no}}, {{flight.airline}}</h1>
 							<img class="col-md-2" src="/media/{{ flight.image }}">
 							<p align="left">{{flight.date}}</p>
 							<p align="left">Departure: {{flight.start}}, {{flight.start_time}}  </p>
                             <p align="left"> To: {{flight.destination}}, {{flight.arrival_time}}</p>
-							<p align="left">Flying Time: {{flight.duration_hr}} hours {{flight.duration_min}} minutes</p>
-							<p align="right"><a class="btn btn-primary" href="{{flight.get_abs_url}}">Book</a></p>
+							<p align="left">Flight Duration: {{flight.duration_hr}} hours {{flight.duration_min}} minutes</p>
+							<p align="right"><span class="btn btn-primary" >Click to Book</span></p>
 						</div>
 					</a>
 
