--- a/static/css/style_from_ecomm.css
+++ b/static/css/style_from_ecomm.css
@@ -196,6 +196,13 @@
 	margin-bottom: 25px;
 }
 
+.checkout__order__costs {
+	padding-top: 12px;
+	border-bottom: 1px solid #d7d7d7;
+	padding-bottom: 10px;
+	margin-bottom: 25px;
+}
+
 .checkout__order__total ul li {
 	list-style: none;
 	font-size: 16px;
@@ -203,6 +210,20 @@
 	font-weight: 600;
 	overflow: hidden;
 	line-height: 40px;
+}
+
+.checkout__order__costs ul li {
+	list-style: none;
+	font-size: 14px;
+	color: black;
+	font-weight: 400;
+	overflow: hidden;
+	line-height: 20px;
+}
+
+.checkout__order__costs ul li span {
+	color: #09C6AB;
+	float: right;
 }
 
 .checkout__order__total ul li span {
