--- a/templates/base.html
+++ b/templates/base.html
@@ -117,7 +117,7 @@
 				<div class="col-md-4">
 					<div class="gtco-widget">
 						<h3>About Us</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eos molestias quod sint ipsum possimus temporibus officia iste perspiciatis consectetur in fugiat repudiandae cum. Totam cupiditate nostrum ut neque ab?</p>
+						<p>We just don't allow you to book flights, we create memorable experiences. If you'd like your experience to be a memory, do make sure to book a trip with us. </p>
 					</div>
 				</div>
 
