--- a/static/css/style_from_ecomm.css
+++ b/static/css/style_from_ecomm.css
@@ -205,7 +205,7 @@
 
 .checkout__order__total ul li {
 	list-style: none;
-	font-size: 16px;
+	font-size: 20px;
 	color: #111111;
 	font-weight: 600;
 	overflow: hidden;
@@ -214,7 +214,7 @@
 
 .checkout__order__costs ul li {
 	list-style: none;
-	font-size: 14px;
+	font-size: 18px;
 	color: black;
 	font-weight: 400;
 	overflow: hidden;
@@ -227,7 +227,7 @@
 }
 
 .checkout__order__total ul li span {
-	color: #ca1515;
+	color: #09C6AB;
 	float: right;
 }
 
