--- a/templates/special_assistance.html
+++ b/templates/special_assistance.html
@@ -2,70 +2,152 @@
 {% load static %}
 
 <html>
-	<head>
-	<title>Traveler &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
-	</head>
-	<body>
-	{% block content %}
+<head>
+    <title>Traveler &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
+    <link href="{% static 'css/style_spec_assist.css' %}" rel="stylesheet" type="text/css" media="all" />
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
+</head>
+<body>
+{% block content %}
 
-	<div id="page">
-
-
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home_flight.jpg	)">
-		<div class="overlay"></div>
-		<div class="gtco-container">
-			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-center">
-					<div class="row row-mt-15em">
-
-						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
-							<h1>Special Assistance</h1>
-						</div>
-
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</header>
+<div id="page">
 
 
+    <header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home_flight.jpg	)">
+        <div class="overlay"></div>
+        <div class="gtco-container">
+            <div class="row">
+                <div class="col-md-12 col-md-offset-0 text-center">
+                    <div class="row row-mt-15em">
 
-	</div>
+                        <div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
+                            <h1>Special Assistance</h1>
+                        </div>
 
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-	</div>
+                    </div>
 
-	{% endblock content %}
-
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Carousel -->
-	<script src="js/owl.carousel.min.js"></script>
-	<!-- countTo -->
-	<script src="js/jquery.countTo.js"></script>
-
-	<!-- Stellar Parallax -->
-	<script src="js/jquery.stellar.min.js"></script>
-
-	<!-- Magnific Popup -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/magnific-popup-options.js"></script>
-
-	<!-- Datepicker -->
-	<script src="js/bootstrap-datepicker.min.js"></script>
+                </div>
+            </div>
+        </div>
+    </header>
 
 
-	<!-- Main -->
-	<script src="js/main.js"></script>
+    <div class="gtco-section3">
+        <div class="col-md-8 col-md-offset-2 text-center gtco-heading m-class">
+					<h2>Need Special Assistance?</h2>
+					<p>Fret not! At Travoyage, we take care of your needs before you even think of them!</p>
+        </div>
 
-	</body>
+    <div class="container">
+        <div class="tabs-sa">
+                <ul class="nav nav-tabs" role="tablist">
+                    <li class="nav-item sa-options">
+                        <a class="" data-toggle="tab" href="#tab-1">Senior Citizens</a>
+                    </li>
+
+                    <li class="nav-item sa-options">
+                        <a class="" data-toggle="tab" href="#tab-2">Mobility Assistance</a>
+                    </li>
+
+                    <li class="nav-item sa-options">
+                        <a data-toggle="tab" href="#tab-3" class="">Unaccompanied Minor</a>
+                    </li>
+
+                    <li class="nav-item sa-options">
+                        <a data-toggle="tab" href="#tab-4" class="active show">Expecting Mother</a>
+                    </li>
+
+                    <li class="nav-item sa-options">
+                        <a data-toggle="tab" href="#tab-5" class="active show">Travelling with an Infant</a>
+                    </li>
+                </ul>
+        </div>
+    </div>
+
+
+    <div class="tab-content">
+        <div class="tab-pane active" id="tab-1">
+            <div class="textblock section">
+                <div class="container ">
+
+                    <p>At Travoyage we are committed to making our youngest customers’ travel experience enjoyable and comfortable. Please see details below.</p>
+
+                </div>
+
+                <div class="clearfix"></div>
+            </div>
+
+        </div>
+
+        <div class="tab-pane" id="tab-2">
+            <div class="textblock section">
+                <div class="    container container-mob">
+
+
+
+
+                    <p><b>Unaccompanied Minor – “Flying Solo Service”</b></p>
+                    <p>Children above the age of two (2) years and below the age of twelve (12) years are regarded as minors. We would request children between the ages of two (2) and five (5) to be accompanied by a companion aged eighteen (18) years or more.</p>
+
+                </div>
+
+                <div class="clearfix"></div>
+            </div>
+
+        </div>
+
+        <div class="tab-pane" id="tab-3">
+            <div class="textblock section">
+                <div class="    container container-mob">
+
+                    <p>For safe travel, we have a few requirements for our customers who are expecting mothers.</p>
+
+                </div>
+                <div class="clearfix"></div>
+
+            </div>
+
+        </div>
+    </div>
+
+     </div>
+
+
+
+
+<div class="gototop js-top">
+    <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+</div>
+
+{% endblock content %}
+
+<!-- jQuery -->
+<script src="js/jquery.min.js"></script>
+<!-- jQuery Easing -->
+<script src="js/jquery.easing.1.3.js"></script>
+<!-- Bootstrap -->
+<script src="js/bootstrap.min.js"></script>
+<!-- Waypoints -->
+<script src="js/jquery.waypoints.min.js"></script>
+<!-- Carousel -->
+<script src="js/owl.carousel.min.js"></script>
+<!-- countTo -->
+<script src="js/jquery.countTo.js"></script>
+
+<!-- Stellar Parallax -->
+<script src="js/jquery.stellar.min.js"></script>
+
+<!-- Magnific Popup -->
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/magnific-popup-options.js"></script>
+
+<!-- Datepicker -->
+<script src="js/bootstrap-datepicker.min.js"></script>
+
+
+<!-- Main -->
+<script src="js/main.js"></script>
+
+</body>
 </html>
 
