Formatting: tab layouts + dummy text and imgs

--- a/templates/special_assistance.html
+++ b/templates/special_assistance.html
@@ -34,12 +34,12 @@
 
     <div class="gtco-section3">
         <div class="col-md-8 col-md-offset-2 text-center gtco-heading m-class">
-					<h2>Need Special Assistance?</h2>
-					<p>Fret not! At Travoyage, we take care of your needs before you even think of them!</p>
+            <h2>Need Special Assistance?</h2>
+            <p>Fret not! At Travoyage, we take care of your needs before you even think of them!</p>
         </div>
 
-    <div class="container">
-        <div class="tabs-sa">
+        <div class="container">
+            <div class="tabs-sa">
                 <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item sa-options">
                         <a class="" data-toggle="tab" href="#tab-1">Senior Citizens</a>
@@ -61,92 +61,167 @@
                         <a data-toggle="tab" href="#tab-5" class="active show">Travelling with an Infant</a>
                     </li>
                 </ul>
+            </div>
         </div>
+
+
+        <div class="tab-content">
+            <div class="tab-pane active" id="tab-1">
+                <div class="gtco-container padding-tab">
+                    <div class="row">
+
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <h4>Our Services</h4>
+                            <p>Lorem ipsum</p>
+                            <br>
+                            <h4>Charges</h4>
+                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
+                            <br>
+                        </div>
+
+
+                        <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
+                            <img src="{% static 'images/img_1.jpg' %}" >
+                        </div>
+
+
+                    </div>
+                </div>
+
+                <div class="clearfix"></div>
+            </div>
+            <div class="tab-pane" id="tab-2">
+                <div class="gtco-container padding-tab">
+                    <div class="row">
+
+                        <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
+                            <img src="{% static 'images/img_1.jpg' %}" >
+                        </div>
+
+                        <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left: 3em;">
+                            <h4>Our Services</h4>
+                            <p>Lorem ipsum</p>
+                            <br>
+                            <h4>Charges</h4>
+                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
+                            <br>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="clearfix"></div>
+            </div>
+             <div class="tab-pane" id="tab-3">
+                <div class="gtco-container padding-tab">
+                    <div class="row">
+
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <h4>Our Services</h4>
+                            <p>Lorem ipsum</p>
+                            <br>
+                            <h4>Charges</h4>
+                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
+                            <br>
+                        </div>
+
+
+                        <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
+                            <img src="{% static 'images/img_1.jpg' %}" >
+                        </div>
+
+
+                    </div>
+                </div>
+
+                <div class="clearfix"></div>
+            </div>
+            <div class="tab-pane" id="tab-4">
+                <div class="gtco-container padding-tab">
+                    <div class="row">
+
+                        <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
+                            <img src="{% static 'images/img_1.jpg' %}" >
+                        </div>
+
+                        <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left: 3em;">
+                            <h4>Our Services</h4>
+                            <p>Lorem ipsum</p>
+                            <br>
+                            <h4>Charges</h4>
+                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
+                            <br>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="clearfix"></div>
+            </div>
+            <div class="tab-pane" id="tab-5">
+                <div class="gtco-container padding-tab">
+                    <div class="row">
+
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <h4>Our Services</h4>
+                            <p>Lorem ipsum</p>
+                            <br>
+                            <h4>Charges</h4>
+                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
+                            <br>
+                        </div>
+
+
+                        <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
+                            <img src="{% static 'images/img_1.jpg' %}" >
+                        </div>
+
+
+                    </div>
+                </div>
+
+                <div class="clearfix"></div>
+            </div>
+
+        </div>
+
     </div>
 
 
-    <div class="tab-content">
-        <div class="tab-pane active" id="tab-1">
-            <div class="textblock section">
-                <div class="container ">
-
-                    <p>At Travoyage we are committed to making our youngest customers’ travel experience enjoyable and comfortable. Please see details below.</p>
-
-                </div>
-
-                <div class="clearfix"></div>
-            </div>
-
-        </div>
-
-        <div class="tab-pane" id="tab-2">
-            <div class="textblock section">
-                <div class="    container container-mob">
 
 
-
-
-                    <p><b>Unaccompanied Minor – “Flying Solo Service”</b></p>
-                    <p>Children above the age of two (2) years and below the age of twelve (12) years are regarded as minors. We would request children between the ages of two (2) and five (5) to be accompanied by a companion aged eighteen (18) years or more.</p>
-
-                </div>
-
-                <div class="clearfix"></div>
-            </div>
-
-        </div>
-
-        <div class="tab-pane" id="tab-3">
-            <div class="textblock section">
-                <div class="    container container-mob">
-
-                    <p>For safe travel, we have a few requirements for our customers who are expecting mothers.</p>
-
-                </div>
-                <div class="clearfix"></div>
-
-            </div>
-
-        </div>
+    <div class="gototop js-top">
+        <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
     </div>
 
-     </div>
+    {% endblock content %}
+
+    <!-- jQuery -->
+    <script src="js/jquery.min.js"></script>
+    <!-- jQuery Easing -->
+    <script src="js/jquery.easing.1.3.js"></script>
+    <!-- Bootstrap -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Waypoints -->
+    <script src="js/jquery.waypoints.min.js"></script>
+    <!-- Carousel -->
+    <script src="js/owl.carousel.min.js"></script>
+    <!-- countTo -->
+    <script src="js/jquery.countTo.js"></script>
+
+    <!-- Stellar Parallax -->
+    <script src="js/jquery.stellar.min.js"></script>
+
+    <!-- Magnific Popup -->
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/magnific-popup-options.js"></script>
+
+    <!-- Datepicker -->
+    <script src="js/bootstrap-datepicker.min.js"></script>
 
 
-
-
-<div class="gototop js-top">
-    <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-</div>
-
-{% endblock content %}
-
-<!-- jQuery -->
-<script src="js/jquery.min.js"></script>
-<!-- jQuery Easing -->
-<script src="js/jquery.easing.1.3.js"></script>
-<!-- Bootstrap -->
-<script src="js/bootstrap.min.js"></script>
-<!-- Waypoints -->
-<script src="js/jquery.waypoints.min.js"></script>
-<!-- Carousel -->
-<script src="js/owl.carousel.min.js"></script>
-<!-- countTo -->
-<script src="js/jquery.countTo.js"></script>
-
-<!-- Stellar Parallax -->
-<script src="js/jquery.stellar.min.js"></script>
-
-<!-- Magnific Popup -->
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/magnific-popup-options.js"></script>
-
-<!-- Datepicker -->
-<script src="js/bootstrap-datepicker.min.js"></script>
-
-
-<!-- Main -->
-<script src="js/main.js"></script>
+    <!-- Main -->
+    <script src="js/main.js"></script>
 
 </body>
 </html>
