--- a/static/css/style.css
+++ b/static/css/style.css
@@ -911,8 +911,37 @@ form label {
   margin-right: 10px;
 }
 
+
+element.style {
+}
+section, .container, .container-fluid {
+    position: relative;
+    word-wrap: break-word;
+    word-break: break-word;
+}
+@media (min-width: 1200px)
+.container {
+    max-width: 1140px;
+}
+@media (min-width: 992px)
+.container {
+    max-width: 960px;
+}
+@media (min-width: 768px)
+.container {
+    max-width: 720px;
+}
+@media (min-width: 576px)
+.container {
+    max-width: 540px;
+}
+
 .tabs-sa{
   justify-content: center;
+}
+
+.padding-tab{
+  padding-top: 4em;
 }
 
 .gtco-heading.gtco-heading-sm {
