--- a/templates/my_flights.html
+++ b/templates/my_flights.html
@@ -7,15 +7,14 @@
 	{% block content %}
 
 
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home_flight.jpg)">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home_flight.jpg	)">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-left">
+				<div class="col-md-12 col-md-offset-0 text-center">
 					<div class="row row-mt-15em">
 
-						<div class="col-md-7 mt-text animate-box" data-animate-effect="fadeInUp">
-							<span class="intro-text-small">Travoyage</span>
+						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
 							<h1>My Flights</h1>
 						</div>
 
