--- a/static/css/style_from_ecomm.css
+++ b/static/css/style_from_ecomm.css
@@ -191,16 +191,17 @@
 
 .checkout__order__total {
 	padding-top: 12px;
-	border-bottom: 1px solid #d7d7d7;
+	border-bottom: 1px solid #09C6AB;
+	border-top: 1px solid #09C6AB;
 	padding-bottom: 10px;
 	margin-bottom: 25px;
 }
 
 .checkout__order__costs {
-	padding-top: 12px;
+	padding-top: 5px;
 	border-bottom: 1px solid #d7d7d7;
-	padding-bottom: 10px;
-	margin-bottom: 25px;
+	padding-bottom: 0px;
+	margin-bottom: 0px;
 }
 
 .checkout__order__total ul li {
@@ -214,7 +215,7 @@
 
 .checkout__order__costs ul li {
 	list-style: none;
-	font-size: 18px;
+	font-size: 16px;
 	color: black;
 	font-weight: 400;
 	overflow: hidden;
